[gd_scene load_steps=7 format=3 uid="uid://b03f3jq8g8n2r"]

[ext_resource type="Script" path="res://Scripts/Menus/main_menu.gd" id="1_tas6b"]
[ext_resource type="PackedScene" uid="uid://cdq6jiymlqywp" path="res://Prefabs/Utils/UI/Buttons/play_button.tscn" id="2_gtwqp"]
[ext_resource type="PackedScene" uid="uid://cv5lo4kisd7u" path="res://Prefabs/Utils/UI/Buttons/config_button.tscn" id="3_s25dq"]
[ext_resource type="PackedScene" uid="uid://5w4vvxb071c2" path="res://Prefabs/Utils/UI/Buttons/exit_button.tscn" id="4_6efg2"]
[ext_resource type="PackedScene" uid="uid://b5adnylpguwhk" path="res://Prefabs/Utils/animated_background.tscn" id="8_30v4r"]
[ext_resource type="PackedScene" uid="uid://cf8bi1o8a4xta" path="res://Scenes/Menus/config_menu.tscn" id="9_ruepf"]

[node name="Menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_tas6b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -254.0
offset_right = 576.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.374139, 0.374139, 0.374139, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 65
text = "SPACE SHOOTER"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 31.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="PlayButton" parent="CanvasLayer/Buttons" instance=ExtResource("2_gtwqp")]
layout_mode = 2

[node name="ConfigButton" parent="CanvasLayer/Buttons" instance=ExtResource("3_s25dq")]
layout_mode = 2

[node name="ExitButton" parent="CanvasLayer/Buttons" instance=ExtResource("4_6efg2")]
layout_mode = 2

[node name="AnimatedBackground" parent="." instance=ExtResource("8_30v4r")]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ConfigMenu" parent="." instance=ExtResource("9_ruepf")]
visible = false
